[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/main/world/creature/Creature2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/main/world/spira.gd" type="Script" id=2]
[ext_resource path="res://src/main/ui/menu/theme/h4.theme" type="Theme" id=3]
[ext_resource path="res://src/main/ui/CheatCodeDetector.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/main/ui/MoneyLabel.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/main/ui/SettingsMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/main/ui/FpsLabel.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/main/ui/VersionLabel.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/main/ui/chat/ChatUi.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/main/ui/overworld-ui.gd" type="Script" id=10]
[ext_resource path="res://src/main/world/glowy-sphere.gd" type="Script" id=11]
[ext_resource path="res://src/main/world/ChatIcon.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/main/fuzzy-circle-128.png" type="Texture" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28, 14 )

[node name="Overworld" type="Node2D"]

[node name="YSort" type="YSort" parent="."]

[node name="Spira" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( 150, 150 )
script = ExtResource( 2 )
creature_def = {
"body_rgb": "b23823",
"ear": "1",
"eye": "1",
"eye_rgb": "282828 dedede",
"horn": "1",
"horn_rgb": "f1e398",
"line_rgb": "6c4331",
"mouth": "2"
}

[node name="Ebe" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( 508.005, 292.368 )
creature_def = {
"body_rgb": "b47922",
"ear": "1",
"eye": "2",
"eye_rgb": "7d4c21 e5cd7d",
"horn": "2",
"horn_rgb": "f1e398",
"line_rgb": "6c4331",
"mouth": "1"
}
chat_id = "ebe"
chat_name = "Ebe"
chat_theme_def = {
"accent_scale": 0.87,
"accent_swapped": true,
"accent_texture": 15,
"color": "b47922"
}

[node name="Bort" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( 278.532, 401.841 )
creature_def = {
"body_rgb": "6f83db",
"ear": "3",
"eye": "1",
"eye_rgb": "374265 eaf2f4",
"horn": "1",
"horn_rgb": "f1e398",
"line_rgb": "6c4331",
"mouth": "2"
}
chat_id = "bort"
chat_name = "Bort"
chat_theme_def = {
"accent_scale": 1.3,
"accent_swapped": false,
"accent_texture": 0,
"color": "6f83db"
}

[node name="Boatricia" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( 731.162, 406.052 )
creature_def = {
"body_rgb": "0b45a6",
"ear": "2",
"eye": "3",
"eye_rgb": "fad541 ffffff",
"horn": "0",
"horn_rgb": "282828",
"line_rgb": "41281e",
"mouth": "1"
}
chat_id = "boatricia"
chat_name = "Boatricia"
chat_theme_def = {
"accent_scale": 0.33,
"accent_swapped": true,
"accent_texture": 1,
"color": "0b45a6",
"dark": true
}

[node name="GlowySphere" type="KinematicBody2D" parent="YSort"]
position = Vector2( 731.162, 206.052 )
script = ExtResource( 11 )

[node name="ChatIcon" parent="YSort/GlowySphere" instance=ExtResource( 12 )]
bubble_type = 2
right_side = false

[node name="Sprite" type="Sprite" parent="YSort/GlowySphere"]
position = Vector2( 0, -32 )
scale = Vector2( 0.539476, 0.539476 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/GlowySphere"]
shape = SubResource( 1 )

[node name="OverworldUi" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labels" type="Control" parent="OverworldUi"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoutheastLabels" type="VBoxContainer" parent="OverworldUi/Labels"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -300.0
margin_right = -10.0
margin_bottom = -10.0
theme = ExtResource( 3 )
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FpsLabel" parent="OverworldUi/Labels/SoutheastLabels" instance=ExtResource( 7 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 246.0
margin_right = 502.0
margin_bottom = 266.0

[node name="VersionLabel" parent="OverworldUi/Labels/SoutheastLabels" instance=ExtResource( 8 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 270.0
margin_right = 502.0
margin_bottom = 290.0

[node name="NorthwestLabels" type="VBoxContainer" parent="OverworldUi/Labels"]
margin_left = 10.0
margin_top = 10.0
margin_right = 512.0
margin_bottom = 300.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyLabel" parent="OverworldUi/Labels/NorthwestLabels" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 502.0
margin_bottom = 32.0
compact = true

[node name="ChatUi" parent="OverworldUi" instance=ExtResource( 9 )]
visible = false
margin_top = 0.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="CheatCodeDetector" parent="OverworldUi" instance=ExtResource( 4 )]
codes = [ "bigfps" ]

[node name="SettingsMenu" parent="OverworldUi" instance=ExtResource( 6 )]
quit_text = "Save + Quit"
[connection signal="chat_event_played" from="OverworldUi/ChatUi" to="OverworldUi" method="_on_ChatUi_chat_event_played"]
[connection signal="pop_out_completed" from="OverworldUi/ChatUi" to="OverworldUi" method="_on_ChatUi_pop_out_completed"]
[connection signal="showed_choices" from="OverworldUi/ChatUi" to="OverworldUi" method="_on_ChatUi_showed_choices"]
[connection signal="cheat_detected" from="OverworldUi/CheatCodeDetector" to="OverworldUi/Labels/SoutheastLabels/FpsLabel" method="_on_CheatCodeDetector_cheat_detected"]
[connection signal="quit_pressed" from="OverworldUi/SettingsMenu" to="OverworldUi" method="_on_SettingsMenu_quit_pressed"]
